--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -19,4 +19,4 @@ jobs:
       - name: Login to Docker Hub
         run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
       - name: Push Docker image
-        run: docker push surajphawade/my-docker-app:latest
+        run: docker push surajsp9/my-docker-app:latest
