--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -12,7 +12,7 @@ jobs:
       - name: Build Docker image
         run: docker build -t my-docker-app .
       - name: Push Docker image to registry
-        run: docker tag my-docker-app your-username/my-docker-app:latest
+        run: docker tag my-docker-app surajsp9/my-docker-app:latest
         env:
           DOCKER_USERNAME: ${{ DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ DOCKER_PASSWORD }}
