Update Changes in ci-cd

--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -1,22 +1,28 @@
-name: CI/CD with Dockerized HTML
+name: Build and Push Docker image
 on:
   push:
     branches:
       - main
+
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
+
       - name: Build Docker image
         run: docker build -t my-docker-app .
-      - name: Push Docker image to registry
-        run: docker tag my-docker-app surajsp9/my-docker-app:latest
-        env:
-          DOCKER_USERNAME: ${{ DOCKER_USERNAME }}
-          DOCKER_PASSWORD: ${{ DOCKER_PASSWORD }}
-      - name: Login to Docker Hub
+
+      - name: Log in to Docker Hub
         run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
-      - name: Push Docker image
-        run: docker push surajsp9/my-docker-app:latest
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Tag Docker image
+        run: docker tag my-docker-app surajsp9/repo1:latest
+
+      - name: Push Docker image to Docker Hub
+        run: docker push surajsp9/repo1:latest
