--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -15,8 +15,8 @@ steps:
 
 - task: Docker@2
   inputs:
-    containerRegistry: 'DockerHubConnection' # Replace with your Docker registry connection name if necessary
-    repository: 'your-docker-username/$(dockerImageName)'
+    containerRegistry: 'SurajDemoConnection' # Replace with your Docker registry connection name if necessary
+    repository: 'surajsp9/$(dockerImageName)'
     command: 'build'
     Dockerfile: '**/Dockerfile'
     tags: |
