Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -18,7 +18,7 @@ steps:
     containerRegistry: 'SurajDemoConnection' # Replace with your Docker registry connection name if necessary
     repository: 'surajsp9/$(dockerImageName)'
     command: 'build'
-    Dockerfile: '**/Dockerfile'
+    Dockerfile: 'Dockerfile'
     tags: |
       $(Build.BuildId)
 
